fixed video lazy loading window shifting

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,15 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .my-masonry-grid {
-    display: -webkit-box; /* Not needed if autoprefixing */
-    display: -ms-flexbox; /* Not needed if autoprefixing */
-    display: flex;
-    margin-left: -30px; /* gutter size offset */
-    width: auto;
-  }
-  .my-masonry-grid_column {
-    padding-left: 2px; /* gutter size */
-    background-clip: padding-box;
-  }
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: 0px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 2px; /* gutter size */
+  background-clip: padding-box;
+}
